# job-hunter

./: .env.example  .gitignore  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  INSTRUCTIONS_ADD_EMAILS.md  LICENSE  QUICKSTART_EMAIL.md  QUICKSTART_EMAILS.md  README.md  SETUP_EMAILS.md  SETUP_EMAIL_RECIPIENTS.md  SUMMARY.md  email_digest.py  package-lock.json  profile.example.json  pyproject.toml  scrape.py  scrapers_au.py  trigger_job_scrape.sh
.claude/commands/: find-jobs.md
.claude/skills/linkedin-easy-apply/: SKILL.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  new_scraper.md
.github/workflows/: ci.yml  daily-digest.yml  daily-jobs.yml  daily-scrape.yml
config/: search.example.json
e2e/: profile-config.spec.ts  wizard-flow.spec.ts
resumes/: README.md  awesome-cv.cls  cv.tex
resumes/cv/: education.tex  experience.tex  extracurricular.tex  projects.tex  skills.tex  summary.tex
tests/: test_profile_loader.py
video/: package.json
video/src/: DemoVideo.tsx  Root.tsx  ScreenSlide.tsx  screens.ts
web/: .env.example  README.md  package-lock.json  package.json
web/prisma/: schema.prisma
web/src/: env.js
web/src/__tests__/: resume-parser.test.ts
web/src/app/: layout.tsx  page.tsx
web/src/app/_components/: skill-tier-editor.tsx
web/src/app/api/callback/: route.ts
web/src/app/api/cron/daily-digest/: route.ts
web/src/app/api/github/device-code/: route.ts
web/src/app/api/github/poll-token/: route.ts
web/src/app/api/github/setup/: route.ts
web/src/app/api/parse-resume/: route.ts
web/src/app/confirmation/[id]/: page.tsx
web/src/app/dashboard/: page.tsx
web/src/app/dashboard/[id]/: page.tsx
web/src/app/profile/[id]/: page.tsx
web/src/app/profile/[id]/_components/: weight-sliders.tsx  (+1 more)
web/src/server/api/routers/: submission.ts  subscription.ts
web/src/server/lib/: resume-parser.ts  worker-client.ts
worker/: Dockerfile  main.py  railway.toml  requirements.txt  start.sh
