[project]
name = "job-hunter"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "curl-cffi>=0.14.0",
    "nodriver>=0.48.1",
    "openpyxl>=3.1.5",
    "pandas>=2.3.3",
    "playwright>=1.58.0",
    "playwright-stealth>=2.0.1",
    "python-jobspy>=1.1.82",
    "requests>=2.32.5",
    "scrapy>=2.14.1",
]
