[project]
name = "job-hunter-au"
version = "1.0.0"
description = "AI-powered job discovery for Australia - scrapes 5 job boards, scores by fit, sends daily email digests"
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
authors = [
    { name = "Elvis Tran" },
]
keywords = ["job-scraper", "australia", "automation", "python", "job-search"]
dependencies = [
    "beautifulsoup4>=4.14.3",
    "nodriver>=0.48.1",
    "openpyxl>=3.1.5",
    "pandas>=2.3.3",
    "python-jobspy>=1.1.82",
    "requests>=2.32.5",
    "ruff>=0.9.0",
]

[project.optional-dependencies]
test = ["pytest>=8.0"]

[project.urls]
Repository = "https://github.com/elvistranhere/job-hunter"
Issues = "https://github.com/elvistranhere/job-hunter/issues"
